<resources>
    <string name="app_name">FIFOOD</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="join">Tham gia ngay</string>
    <string name="near_me">Near me</string>
    <string name="add_store">Add Store</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>
    <string name="map">Map</string>
    <string name="back">Back</string>
    <string name="user_name">User Name</string>
    <string name="loading">Loading...</string>
    <string name="error_title">Error</string>
    <string name="error_retry">Please try again</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="total_posts">Total posts:</string>
    <string name="logout">Logout</string>
    <string name="store_name">Store Name</string>
    <string name="store_address">Store Address</string>
    <string name="content">Content</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="hygiene_problem">Hygiene Problem</string>
    <string name="post">Post</string>
    <string name="hint">Write a comment ...</string>
    <string name="days">days</string>
    <string name="food_safety_authority">Food Safety Authority</string>
    <string name="images">Images</string>
    <string name="facebook_app_id">1700629383488025</string>
    <string name="account_create_success">Store created successfully!</string>
    <string name="error_mail_account_exists">Created Fail</string>

</resources>
