<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/store_name"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_name_store"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_search_size"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginTop="5dp"
                android:background="@drawable/theme_color_border_background"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginTop="5dp"
                android:text="@string/store_address"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_store_address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_search_size"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginTop="5dp"
                android:background="@drawable/theme_color_border_background"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginTop="5dp"
                android:text="@string/content"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_content_add_store"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_edit_content_add_store"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginTop="5dp"
                android:background="@drawable/theme_color_border_background"
                android:gravity="top"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>

        </LinearLayout>

        <View
            android:id="@+id/view_3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/view_margin"
            android:layout_marginRight="@dimen/view_margin"
            android:background="@color/themeHeader" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="3">


            <RelativeLayout
                android:id="@+id/rl_good"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8">

                <ImageView
                    android:id="@+id/iv_good"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_good" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/iv_good"
                    android:text="@string/good"
                    android:textSize="@dimen/text_size_add_store" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_bad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.8">

                <ImageView
                    android:id="@+id/iv_bad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/ic_bad" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/iv_bad"
                    android:text="@string/bad"
                    android:textSize="@dimen/text_size_add_store" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_hygiene_problem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.4">

                <ImageView
                    android:id="@+id/iv_hygiene_problem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/checkbox_bg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:layout_toLeftOf="@id/iv_hygiene_problem"
                    android:text="@string/hygiene_problem"
                    android:textSize="@dimen/text_size_add_store" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/iv_take_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cam"
                android:layout_weight="0.5"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center|right"
                android:text="Choose image avatar"
                android:layout_weight="2"
                android:layout_marginRight="@dimen/default_margin"/>
            <ImageView
                android:id="@+id/iv_choose_avatar_store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cam"
                android:layout_weight="0.5"/>
        </LinearLayout>


        <GridView
            android:id="@+id/gv_display_image_store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/themeHeader"
            android:numColumns="3"
            android:verticalSpacing="3dp"
            android:horizontalSpacing="3dp"
            android:stretchMode="columnWidth"
            android:gravity="center"></GridView>
    </LinearLayout>
</ScrollView>