<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/themeHeader"
    android:weightSum="1">
    <Button
        android:id="@+id/iv_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/back1x"
        android:layout_weight="0.4"
        android:padding="10dp"
        android:background="@color/themeHeader"/>
    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/images"
        android:textColor="@color/white"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/iv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:padding="10dp"
        android:background="@color/themeHeader"/>
</LinearLayout>
    <LinearLayout
        android:id="@+id/ll_item_list_store"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4">

            <ImageView
                android:id="@+id/iv_avatar_store"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:layout_centerInParent="true"
                android:layout_margin="5dp"
                android:src="@drawable/profile_placeholder" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.25">

            <TextView
                android:id="@+id/name_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/user_name" />

            <TextView
                android:id="@+id/tv_address_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_store"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/store_address"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.35">

            <RatingBar
                android:id="@+id/iv_number_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="0"
                style="@style/foodRatingBar"
                android:background="@color/white"
                android:focusable="false"/>

            <TextView
                android:id="@+id/tv_range"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_number_star"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="@dimen/default_margin"
                android:gravity="center"
                android:text="0"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/themeHeader">
        <GridView
            android:id = "@+id/gv_list_image_store"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:columnWidth="@dimen/height_layout_logout"
            android:numColumns="3"
            android:stretchMode="columnWidth"
            android:gravity="center">
        </GridView>
    </LinearLayout>

</LinearLayout>